update de código
* Se escanea el código con sonar y se hacen remediaciones.